--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,10 @@ importlib-metadata==6.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
-mediafire==0.6.1
 requests==2.28.2
 requests-toolbelt==0.10.1
 six==1.16.0
 urllib3==1.26.15
+waitress==2.1.2
 Werkzeug==2.2.3
 zipp==3.15.0
-waitress
